# nackademin-langchain-demo

./: .gitignore  README.md  main.py  pyproject.toml
examples/agent-lecture/: rag_agent.py  simple_agent.py
examples/agent_lecture/: agent_with_memory.py  rag_agent.py  web_fetcher.py
examples/agent_lecture/rag_docs/: lanchain_intro.txt  rag_notes.txt  tools_notes.txt
examples/tool_lecture/: mcp_agent.py
